<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="30dp"
    android:background="@android:color/white"
    android:paddingHorizontal="20dp"
    android:paddingVertical="36dp">

    <ProgressBar
        android:id="@+id/loading_progress_bar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/magentaColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loading_processing_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/teleneooffice_extrabold"
        android:text="@string/processing"
        android:textAllCaps="true"
        android:textColor="@color/magentaColorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loading_progress_bar" />

    <View
        android:id="@+id/divider_one"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#999999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loading_processing_text_view" />

    <TextView
        android:id="@+id/retrieving_token_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ellipsize="end"
        android:fontFamily="@font/teleneooffice_extrabold"
        android:gravity="start"
        android:text="@string/loading_text_retrieving_transaction_token"
        android:textColor="#999999"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/retrieving_token_check_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_one" />

    <TextView
        android:id="@+id/retrieving_token_ellipsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/teleneooffice_extrabold"
        android:text="@string/ellipsize"
        android:textColor="#999999"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/retrieving_token_text"
        app:layout_constraintEnd_toEndOf="@id/retrieving_token_check_icon"
        app:layout_constraintStart_toStartOf="@id/retrieving_token_check_icon"
        app:layout_constraintTop_toTopOf="@id/retrieving_token_text" />

    <ImageView
        android:id="@+id/retrieving_token_check_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/ic_success"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/retrieving_token_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/retrieving_token_text" />

    <View
        android:id="@+id/divider_two"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="#999999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/retrieving_token_text" />

    <TextView
        android:id="@+id/transferring_to_portal_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ellipsize="end"
        android:fontFamily="@font/teleneooffice_extrabold"
        android:gravity="start"
        android:text="@string/loading_text_transferring_to_portal"
        android:textColor="#999999"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_two" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/teleneooffice_extrabold"
        android:text="@string/ellipsize"
        android:textColor="#999999"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/transferring_to_portal_text"
        app:layout_constraintEnd_toEndOf="@id/retrieving_token_check_icon"
        app:layout_constraintStart_toStartOf="@id/retrieving_token_check_icon"
        app:layout_constraintTop_toTopOf="@id/transferring_to_portal_text" />

    <View
        android:id="@+id/divider_three"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="#999999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transferring_to_portal_text" />

    <Button
        android:id="@+id/dismiss_button"
        style="@style/WhiteButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/magentaColorPrimary"
        android:text="@string/dismiss"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_three" />
</androidx.constraintlayout.widget.ConstraintLayout>